[tool.poetry]

name = "cnabera"
version = "0.1.1"
description = "Biblioteca para gerar arquivos CNAB, obedecendo o padrão estabelecido pela FEBRABAN"
authors = authors = ["Jhonatan Teodoro <mollitiamteodoro@gmail.com>", "Diego Sorrilha <diego@sorrilha.net>"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://pypi.org/project/cnabera"
repository = "https://github.com/jeitto/cnabera"
keywords = ["cnab"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
isort = "^4.3.21"
flake8 = "^3.7.8"
ipdb = "^0.12.1"
isort = "^4.3.21"
tox = "^3.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
